Fix: logo positioining and size on smaller devices

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -386,6 +386,41 @@ body {
 
 } /** end of media query **/ 
 
-@media screen and (max-width: 764px){
 
+@media screen and (max-width: 768px){
+
+    .logo-header {
+        visibility:hidden;     
+    
+        }
+    .logo-header-centre {
+        max-width:300px;
+        height:100px;
+        background-image: url('/media/tws_logo.PNG');
+        display: block;
+        background-size:contain;
+        margin:auto;
+        background-repeat:no-repeat;        
+        border-right: 0.2rem solid white;      
+    
+    }    
+}
+
+@media screen and (max-width: 1024px){
+
+    .logo-header {
+        visibility:hidden;     
+    
+        }
+    .logo-header-centre {
+        max-width:300px;
+        height:100px;
+        background-image: url('/media/tws_logo.PNG');
+        display: block;
+        background-size:contain;
+        margin:auto;
+        background-repeat:no-repeat;        
+        border-right: 0.2rem solid white;      
+    
+    }    
 }
